          slowdowns ( in some cases 50x ) of very complex prefetch/selects
        - DBIx::Class::Optional::Dependencies now properly understands
          combinations of requirements and does the right thing with e.g.
          ->req_list_for([qw( rdbms_oracle ic_dt )]) bringing in the Oracle
          specific DateTime::Format dependencies

    * Fixes
        - Fix incorrect SQL generated with invalid {rows} on complex resultset
          operations, generally more robust handling of rows/offset attrs
        - Fix incorrect $storage state on unexpected RDBMS disconnects and
          other failure events, preventing clean reconnection (RT#110429)
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix incorrect data returned in a corner case of partial-select HRI
          invocation (no known manifestations of this bug in the field, see
          commit message for description of exact failure scenario)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix spurious warning on MSSQL cursor invalidation retries (RT#102166)
        - Fix several corner cases with Many2Many over custom relationships

    * Misc
        - Add explicit test for pathological example of asymmetric IC::DT setup
          working with copy() in t/icdt/engine_specific/sybase.t (GH#84)
        - Fix t/54taint.t failing on local::lib's with upgraded Carp on 5.8.*
        - Fix invalid variable names in ResultSource::View examples
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Stop using bare $] throughout - protects the codebase from issues